# cargo-kit

./: CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
src/: lib.rs  main.rs  predefined.rs  template.rs
src/dialog/: known_options.rs  mod.rs  utils.rs
src/dialog/prompts/: confirm_diff.rs  customize_template.rs  select_profile.rs  select_template.rs
src/workspace/: config.rs  manifest.rs
tests/integration/utils/: mod.rs
