[package]
name = "cargo-kit"
version = "0.1.3"
edition = "2021"

description = "Cargo subcommand to apply performance, compile-time, or size-optimized profiles and configs to your Rust project for enhanced build efficiency."
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/cargo-kit"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
keywords = [
    "cargo",
    "profile",
    "template"
]
categories = ["development-tools::cargo-plugins"]

readme = "README.md"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
atty = "0.2.14"
cargo_metadata = "0.18.1"
clap = { version = "4.5.1", features = ["derive"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
indexmap = "2.2.5"
inquire = "0.7.0"
rustc_version = "0.4.0"
similar = { version = "2.4.0", features = ["inline"] }
thiserror = "1.0.66"
toml_edit = "0.22.20"
which = "7.0.0"

[dev-dependencies]
tempfile = "3.13.0"
insta = "1.41.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
rexpect = "0.5.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
